Add `/node/v1/setJobsEnabled/{nodeName}` API endpoint. Closes #2326
